starting with claude cleaning shit up

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,28 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    
+    resolutionStrategy {
+        eachPlugin {
+            // Use the same version of Kotlin as defined in the root build.gradle
+            if (requested.id.namespace == 'org.jetbrains.kotlin') {
+                useVersion('1.8.0')
+            }
+        }
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
 rootProject.name = 'android-shopping-list-app'
 include ':app'
